tests/golden/type_errors/array_map_generic_callback.cd
fun constant<T>(value: number): number { return value; }
map([1], constant);
