tests/golden/type_errors/array_map_generic_callback.err
Type error at 2:18: map cannot infer type parameter T
  map([1], constant);
                   ^
